--- a/spring_properties/my-test-service.properties
+++ b/spring_properties/my-test-service.properties
@@ -1,3 +1,3 @@
-my.test.defaultprop=default value from config server =================changed
+my.test.defaultprop=default value from config server =================old
 my.test.serviceprop=service property from config server
 #my.test.envprop= env property from config server
